# anvil

./: LICENSE  README.md  install.sh
.archive/: pyproject.toml
.archive/forge-old/: __init__.py  chat.py  cli.py  config.py  git_ops.py  planner.py  reviewer.py  runner.py  state.py  worker.py
docs/superpowers/specs/: 2026-03-30-forge-aider-claude-review-design.md
examples/calculator/: README.md
examples/calculator/.anvil/: plan.md
scripts/: anvil  anvil-build  anvil-help  anvil-plan-answers  anvil-review  anvil-review-api  anvil-review-local  anvil-test-suite
templates/: aider.conf.yml  anvil.env
